# flutter_rust_sip

./: .gitignore  .gitmodules  .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
.qwen/: settings.json  settings.json.orig
android/: build.gradle  build.gradle.kts  settings.gradle
cargokit/gradle/: plugin.gradle
example/: README.md  pubspec.yaml
example/lib/: call_status_card.dart  call_widget.dart  caller_widget.dart  di.dart  login_widget.dart  main.dart  sip_widget_builder.dart
example/linux/: CMakeLists.txt
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
hook/: build.dart  env_utilizer.dart
integration_test/: simple_test.dart  test_widget.dart
lib/: flutter_rust_sip.dart  main.dart  rust_lib.dart  sip_api.dart  sip_service.dart
lib/rust/: dart_types.dart  dart_types.freezed.dart  frb_generated.dart  frb_generated.io.dart  (+1 more)
linux/: CMakeLists.txt
rust/: Cargo.toml  rust-toolchain.toml
rust/examples/: main.rs  project.rs
rust/pjproject-sys/: build.rs
rust/pjproject-sys/pjlibs/linux/: placeholder.txt
rust/pjproject-sys/pjlibs/mac_os/: placeholder.txt
rust/pjproject-sys/pjlibs/windows/: placeholder.txt
rust/sip-phone-rs/: Cargo.toml
rust/sip-phone-rs/src/: lib.rs
rust/sip-test/: Cargo.toml
rust/sip-test/src/: main.rs
rust/src/: frb_generated.rs  lib.rs  utils.rs
rust/src/api/: lib.rs  simple.rs
rust/src/core/: dart_types.rs  fluttersink.rs  helpers.rs  manager.rs  managers.rs  mod.rs  pj_worker.rs  types.rs  utils.rs
rust_builder/: pubspec.yaml
windows/: CMakeLists.txt
(+40 files in other folders)
