[package]
name = "rust_sip"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.99"
flutter_rust_bridge = "=2.11.1"
lazy_static = "1.5.0"
log = "0.4.27"
pjsip-sys = { path = "../../pjsip-sys" } 
thiserror = "2.0.16"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
